--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="row">
             <div class="col text-center">
-                <h4>Предимствата да си шахматист</h4>
+                <h4 class="bg-secondary-subtle">Предимствата да си шахматист</h4>
             </div>
         </div>
 
