--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="row">
             <div class="col text-center">
-                <h4 class="bg-secondary-subtle">Предимствата да си шахматист</h4>
+                <h4 style="border-radius: 5px;" class="bg-secondary-subtle mb-2">Предимствата да си шахматист</h4>
             </div>
         </div>
 
@@ -47,7 +47,7 @@
         </br>
         <div class="row">
             <div class="col-sm-12 col-md-6 text-center">
-                <h2 class="bg-secondary-subtle">За мен</h2>
+                <h2 style="border-radius: 5px;" class="bg-secondary-subtle">За мен</h2>
                 <p>Национални международни и свтовни успехи в шахмата. Най-младият
                     лицензиран треньор. Съдия. Педагог. Отлично взети курсове „Детско юношеска психология“. Студент по
                     философия.
@@ -60,7 +60,7 @@
         </br>
         <div class="row">
             <div class="col-sm-12 col-md-6 text-center">
-                <h2 class="bg-secondary-subtle">Нашето семейство</h2>
+                <h2 style="border-radius: 5px;" class="bg-secondary-subtle">Нашето семейство</h2>
                 <p>Ние тренираме. Пътуваме и лагеруваме. Състезавайки се помежду ни се учим как да се наслаждаваме на
                     победата и да приемаме загубата с достойнство. Поемаме отговорности и приемаме
                     предизвикателства. Играем индивидуално, но сме колектив.
@@ -95,8 +95,8 @@
         </div>
         </br>
         <div class="row">
-            <div class="col text-center mb-2">
-                <h2 class="bg-secondary-subtle">За уроците</h2>
+            <div class="col text-center">
+                <h2 style="border-radius: 5px;" class="bg-secondary-subtle">За уроците</h2>
             </div>
         </div>
 
@@ -172,7 +172,7 @@
         </br>
         <div class="row">
             <div class="col text-center">
-                <h2 class="bg-secondary-subtle mb-3">Контакти</h2>
+                <h2 style="border-radius: 5px;" class="bg-secondary-subtle mb-2">Контакти</h2>
                 <ul class="list-group">
                     <li class="list-group-item"><strong>Facebook:</strong> Габриела Великова</li>
                     <li class="list-group-item"><strong>Телефон:</strong> 089 300 7957</li>
