--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
                             <img src="family_2.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="family_1.jpg" class="d-block w-100" alt="...">
+                            <img src="family_3.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="family_4.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -174,7 +177,8 @@
             <div class="col text-center">
                 <h2 style="border-radius: 5px;" class="bg-secondary-subtle mb-2">Контакти</h2>
                 <ul class="list-group">
-                    <li class="list-group-item"><strong>Facebook:</strong> Габриела Великова</li>
+                    <li class="list-group-item"><strong>Facebook:</strong> <a
+                            href="https://www.facebook.com/gabriela.velikova.739">Габриела Великова</a></li>
                     <li class="list-group-item"><strong>Телефон:</strong> 089 300 7957</li>
                     <li class="list-group-item"><strong>Адрес:</strong> ул.Искър 49, гр.София</li>
                 </ul>
