Found a bug with image_1, deleting. Will try to reupload

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </p>
             </div>
             <div class="col-sm-12 col-md-6">
-                <img src="image_1.jpg" alt="Sample Picture" class="img-fluid">
+                <img src="image_1.jpg" alt="Gabriela Velikova" class="img-fluid">
             </div>
         </div>
         </br>
