--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-6 text-center">
                 <h2 style="border-radius: 5px;" class="bg-secondary-subtle">За мен</h2>
-                <p>Национални международни и свтовни успехи в шахмата. Най-младият
+                <p>Национални, международни и свтовни успехи в шахмата. Най-младият
                     лицензиран треньор. Съдия. Педагог. Отлично взети курсове „Детско-юношеска психология“. Студент по
                     философия.
                 </p>
