--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         </br>
         <div class="row">
-            <div class="col text-center">
+            <div style="margin-bottom: 1px;" class="col text-center">
                 <h2 style="border-radius: 5px;" class="bg-secondary-subtle">За уроците</h2>
             </div>
         </div>
