--- a/index.html
+++ b/index.html
@@ -139,14 +139,126 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <ul class="list-group">
-                                <li class="list-group-item"><strong>Понеделник:</strong> 18:00 - 20:00</li>
-                                <li class="list-group-item"><strong>Петък:</strong> 18:00 - 20:00</li>
-                                <li class="list-group-item"><strong>Събота:</strong> 10:00 - 12:00</li>
-                                <li class="list-group-item"><strong>Неделя:</strong> 10:00 - 12:00</li>
-                            </ul>
-                            </br>
-                            <p><strong>Пакет 8 посещения:</strong> 120 лв</p>
+                            <p>
+                                ## 1. Основният протокол за електронна поща, който се използва в интернет се нарича:
+                                SMTP
+                                ## 2. Най-използваният стандарт за локални мрежи днес е:
+                                IEEE 802.3
+                                ## 3. Блокът от данни, който се формира и предава в мрежовия слой на модела OSI се
+                                нарича:
+                                Пакет
+                                ## 4. Симплекс е метод, при който:
+                                Комуникацията е винаги само в едната посока
+                                ## 5. Избройте във възходящ ред слоевете на OSI модела, като започнете от най-близкия до
+                                комуникационната линия:
+
+                                Ком. линия -> Физически -> Канален -> Мрежов -> Транспортен -> Сесиен -> Представителен
+                                -> Приложен
+
+                                ## 6. Посочете разликите между маршрутизатор и комутатор:
+
+                                Маршрутизаторът пренасочва данни между различни мрежи.
+                                Комутаторът пренасочва данни в една и съща мрежа.
+
+                                ## 7. Изпишете правилната последователност при подредбата на:
+
+                                Доставчик на интернет -> Рутер -> Безжична точка за достъп -> Суич -> Лаптоп -> Принтер
+
+                                ## 8. Какво е маршрутизиране:
+
+                                Процеса на определяне на оптималния път за пренасочване на данни от източника към
+                                дестинацията в мрежата.
+                                Маршрутизирането включва следните стъпки:
+                                1. Идентификация на мрежови пътища
+                                2. Вземане на решение за маршрут
+                                3. Пренасочване на данни
+                                4. Актуализация на таблицата за маршрутизация
+
+                                ## 9. Кои класове IP адреси могат да се назначават на хостове:
+                                A, B, C
+                                ## 10. Ако за адрес на получателя се използва IPv4 адресът 239.255.255.255, то
+                                предаването е:
+                                Multicast
+                                ## 11. Посочете невалидната мрежова маска:
+                                255.255.192.64
+                                ## 12. Разяснете понятието MAC адрес:
+
+                                Уникален идентификатор, който се присвоява на мрежовите интерфейси на устройствата в
+                                мрежата.
+                                Обикновено е представен като 12-цифрено шестнадесетично число. Комутаторите и
+                                маршрутизаторите използват MAC
+                                адреса за управление на трафика в мрежата.
+
+                                ## 13. Опишете колко и кои са видовете адреси в модела TCP/IP и посочете нивата, на
+                                които се използва всеки от тях:
+
+                                URL - Приложен слой
+                                Port - Транспортен слой
+                                IP адрес (IPv4/IPv6) - Мрежов слой
+                                MAC адрес - Канален слой
+
+                                ## 14. Колко адреса съдържа 802.11 MAC кадърът:
+                                4, RA SA TA BSSID
+                                ## 15. Каква мрежова маска трябва да се постави, за да може от мрежа с адрес 193.16.0.0
+                                да се разбие на 4 подмрежи? Кои са новополучените подмрежи, шлюзове и IP адреси за
+                                назначаване:
+
+                                Маска - 255.255.255.252
+                                1) Мрежа - 193.16.0.0, Шлюз - .0.1, IP адреси за назначаване .0.2 - .0.62 (ако приемем,
+                                че .0.63 е за broadcast)
+                                2) Мрежа - .0.64, Шлюз -.0.65, IP адреси за назначаване .0.66 - .0.126 (ако приемем, че
+                                .0.127 е за broadcast)
+                                3) Мрежа - .0.128, Шлюз - .0.129, IP адресе за назначаване .0.130 - .0.190 (ако приемем,
+                                че .0.191 е за broadcast)
+                                4) Мрежа - .0.192, Шлюз - .0.193, IP адрес за назначаване .0.194 - .0.254 (ако приемем,
+                                че .0.255 е за broadcast)
+
+                                ## 16. При какви случаи се използва подобен код:
+
+                                R2(config)#router rip
+                                R2(config-router)#ver 2
+                                R2(config-router)#network 196.0.0.0
+                                R2(config-router)#network 192.168.200.0
+                                R2(config-router)#exit
+
+
+                                Този код конфигурира рутера да използва RIP версия 2 и му казва
+                                за кои мрежи да обменя информация с други рутери.
+                                Този процес на обмяна на информацията за рутиране помага на рутерите
+                                да определят оптималния път за препращане на данни в мрежата.
+
+                                ## 17. За всеки шумоустойчив цикличен код (CRC) е характерно следното:
+
+                                Всяко едно от изброените. (Провери дали останалите въпроси завършват на: кодова дума,
+                                полином, полином)
+                                --------------------------------------------------------------------------------
+
+                                ## 1. Дейтаграмен режим се използва при:
+                                Комутация на пакети
+                                ## 2. Блокът от данни, който се формира и предава в каналния слой на модела OSI се
+                                нарича:
+                                Кадър
+                                ## 3. За локална мрежа тип IEEE 802.4 се използва следния протокол за достъп до средата:
+                                Token Bus
+                                ## 4. За увеличаване на реалната скорост на предаване в локални мрежи Ethernet се
+                                използват:
+                                Комутатори
+                                ## 5. Посочете грешния IP адрес:
+                                87.126.74.256
+                                ## 6. Посочете валидната мрежова маска:
+                                255.255.255.252
+                                ## 7. При какви случаи се използва подобен код:
+
+                                R1(config)#ip dhcp pool p0
+                                R1(dhcp-config)#network 192.168.0.0 255.255.255.0
+                                R1(dhcp-config)#default-router 192.168.0.1
+                                R1(dhcp-config)#exit
+
+
+                                Този код конфигурира маршрутизатора като DHCP сървър и му казва какви IP адреси,
+                                мрежова маска и стандартен маршрутизатор да предоставя на клиентите, които заявят DHCP
+                                конфигурация.
+                            </p>
                         </div>
                     </div>
                 </div>
