--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <p>
+                            <p style="white-space: pre-line">
                                 ## 1. Основният протокол за електронна поща, който се използва в интернет се нарича:
                                 SMTP
                                 ## 2. Най-използваният стандарт за локални мрежи днес е:
