--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 да се разбие на 4 подмрежи? Кои са новополучените подмрежи, шлюзове и IP адреси за
                                 назначаване:
 
-                                Маска - 255.255.255.252
+                                Маска - 255.255.255.192
                                 1) Мрежа - 193.16.0.0, Шлюз - .0.1, IP адреси за назначаване .0.2 - .0.62 (ако приемем,
                                 че .0.63 е за broadcast)
                                 2) Мрежа - .0.64, Шлюз -.0.65, IP адреси за назначаване .0.66 - .0.126 (ако приемем, че
@@ -247,7 +247,11 @@
                                 87.126.74.256
                                 ## 6. Посочете валидната мрежова маска:
                                 255.255.255.252
-                                ## 7. При какви случаи се използва подобен код:
+                                ## 7. Link-local адреси са за случаи, при които хостът не може да получи TCP/IP
+                                конфигурационни параметри от DHCP сървър или не са му назначени статично. В този случай
+                                той си определя адрес в обхвата:
+                                169.254.0.0 - 169.254.255.255
+                                ## 8. При какви случаи се използва подобен код:
 
                                 R1(config)#ip dhcp pool p0
                                 R1(dhcp-config)#network 192.168.0.0 255.255.255.0
@@ -258,6 +262,26 @@
                                 Този код конфигурира маршрутизатора като DHCP сървър и му казва какви IP адреси,
                                 мрежова маска и стандартен маршрутизатор да предоставя на клиентите, които заявят DHCP
                                 конфигурация.
+                                Клиентските устройства могат да използват DHCP, за да получат автоматично конфигурирани
+                                IP адреси и други мрежови параметри.
+
+                                ## 9. При какви случаи се използва подобен код:
+
+                                R1(config)#int f0/0
+                                R1(config-if)#ip nat inside
+                                R1(config-if)#exit
+
+                                R1(config)#int s0/0
+                                R1(config-if)#ip nat outside
+                                R1(config-if)#exit
+
+                                Кодът посочва, че интерфейсът f0/0 е вътрешен, а интерфейсът s0/0 е външен.
+                                Маршрутизаторът ще използва NAT за превеждане на IP адресите на пакетите, когато те
+                                преминават от вътрешна към външна среда и обратно.
+
+                                ## 10. Нека C е двоичен линеен [7,4] код с пораждаща матрица G и възможност за корекция
+                                на единична грешка. Кодирайте информационната поредица 0110. Запишете я
+                                G=[[1,0,0,0,1,0,1],[0,1,0,0,1,1,1],[0,0,1,0,1,1,0],[0,0,0,1,0,1,1]]
                             </p>
                         </div>
                     </div>
